Tests/Pos/Ecall/Ecall1.p
main machine A {
start state B {
entry {
      __x__y();
}
}
}
