Tests/Neg/UndeclaredIds/UndeclaredEvent2.p
main ghost machine Foo {
    start state S1 {
        ignore Bar;
        entry {
        }
    }   
}
